styles/prosilver/theme/common.css
/* ... */
#extratabs #extratabs-head li {
	list-style: none;
	float: left;
	font-weight: normal;
	margin-right: 2px;
	background: none transparent;
	border: 0;
}

#extratabs #extratabs-head li a {
	background-color: #EDEDEE;
	background-image: none;
	border: 1px solid #EDEDEE;
	text-transform: uppercase;
	padding: 5px 10px;
	color: #2D556F;
	position: relative;
	margin-top: 2px;
	display: block;
}

#extratabs #extratabs-head li.activetab a, #extratabs #extratabs-head li.activetab a:hover {
	background-color: #FFF !important;
	border-color: #E5E5E6 !important;
	color: #333 !important;
	border-bottom-color: #FFFFFF !important;
	padding-bottom: 7px;
	bottom: -2px;
	margin-top: 0;
}

#extratabs #extratabs-head a:hover {
	background-color: #627179;
	border-color: #627179;
	color: #FFFFFF;
}

a.screenshot img, img.screenshot {
	background-color: #FFFFFF;
	padding: 3px;
	border: 1px solid #A1A1A1;
	vertical-align: text-top;
	margin: 5px;
}

.main-panel a.screenshot:hover img {
	border-color: #757575;
}

.icon-expand, .icon-contract {
	background: url("./images/icon_contracted.gif") no-repeat 0 0;
	cursor: pointer;
	display: block;
	float: left;
	height: 16px;
	margin: 3px 5px 0 5px;
	width: 16px;
}

.icon-contract {
	background-image: url("./images/icon_expanded.gif");
}

/* Author Profile
--------------------------------------------- */
#author-profile .left-column {
	float: left;
	width: 200px;
	margin-right: 0;
}

#author-profile .right-column {
	float: none;
	width: auto;
	margin-left: 210px;
}

.no-avatar-img {
	background: url("./images/no_avatar.gif") no-repeat 0 0;
	width: 118px;
	height: 17px;
	padding-top: 103px;
	margin: auto;
	color: #D8D8D7;
}

/* Contrib Manage
--------------------------------------------- */
#screenshot-manage dl {
	border-bottom: 1px dashed #CCCCCC;
	padding-top: 8px;
}

#screenshot-manage dl:last-child { border-bottom: none; }

.item-control-button {
	background-repeat: no-repeat;
	display: block;
	float: right;
	height: 16px;
	margin-left: 5px;
	width: 16px;
}

.edit		{ background-image: url("./images/icon_edit.gif"); }
.delete		{ background-image: url("./images/icon_delete.gif"); }
.move-up 	{ background-image: url("./images/icon_up.gif"); }
.move-down	{ background-image: url("./images/icon_down.gif"); }
.move-up-disabled	{ background-image: url("./images/icon_up_disabled.gif"); }
.move-down-disabled	{ background-image: url("./images/icon_down_disabled.gif"); }

#colorizeit-frame {
	border-width: 0;
	height: 900px;
	width: 100%;
}

/* Contribution List
--------------------------------------------- */
.contrib-filter {
	background-color: #f1f4f6;
	border-radius: 5px;
	padding: 5px;
}

.contrib-list-container {
	box-sizing: border-box;
	display: inline-block;
	padding-left: 10px;
	width: 75%;
}

.contrib-list-container .action-bar:first-child {
	margin-bottom: 10px;
}

.no-results {
	color: #BC2A4D;
	font-size: 1.2em;
	padding: 20px;
	text-align: center;
}

.contrib-quickview {
	background-color: #f1f4f6;
	border-left: 5px solid #ffffff;
	border-radius: 10px;
	box-sizing: border-box;
	display: inline-block;
	float: left;
	margin-bottom: 10px;
	padding: 15px 10px 10px;
	position: relative;
	text-align: center;
	width: 50%;
}

.quickview-title {
	font-size: 1.2em;
	position: relative;
}

.quickview-preview {
	height: 130px;
	margin-top: 5px;
}

.quickview-desc {
	display: none;
}

.quickview-label {
	background-color: #FFFFFF;
	border: 1px solid #c9cacb;
	border-radius: 3px;
	display: inline-block;
	padding: 4px;
}

.label-clean, .label-hidden, .label-disabled, .label-new {
	color: #9D1212;
}

.categories {
	border-right: 1px dotted #b4bac0;
	box-sizing: border-box;
	display: inline-block;
	float: left;
	font-size: 1.2em;
	list-style: none;
	padding-right: 5px;
	vertical-align: top;
	width: 25%;
}

.categories a {
	display: block;
	padding: 5px;
}

.categories a:hover, .sort-option a:hover {
	text-decoration: none;
}

.categories span {
	float: right;
}

.categories .active {
	background-color: #4692bf;
	border-radius: 3px;
	color: #FFFFFF;
	padding-right: 5px;
}

.sort-option .active {
	font-style: italic;
}

.sort-option {
	display: inline-block;
	margin-left: 5px;
	margin-top: 2px;
	padding: 3px;
}

.sort-option:after {
	content: '\25BC';
}

.sort-option .dropdown-toggle {
	cursor: pointer;
}

/* Listings
--------------------------------------------- */
dd.faq-tools {
	text-align: right;
	border: 0 !important;
	width: 240px;
}

dd.general {
	padding-left: 5px !important;
	padding-right: 5px !important;
	font-size: 1.1em;
}

dd.general img {
	vertical-align: middle;
}

#categories .forums dd.general {
	font-size: 1.2em;
}

#categories .content {
	font-size: 1.2em;
}

ul.simple li.header dt, ul.simple li.header dd {
	color: #000000;
	margin-bottom: 2px;
}

.container .cplist li.row {
	border-bottom: 1px solid #B5C1CB;
	border-top: 1px solid #F9F9F9;
}

.container .forabg {
	background-image: none;
}

.revisions dt {
	margin-right: -520px !important;
}

.revisions .list-inner {
	margin-right: 520px !important;
}

.revisions dd {
	width: 130px !important;
}

dd.revision-version, dd.phpbb-version {
	text-align: center;
}

#translations-panel {
	clear: both;
}

#translations-panel dl dt ul li {
	padding: 2px 0;
}

ul.topiclist dd.revision-actions {
	text-align: right;
	border-left: 0;
}

ul.topiclist dd.revision-status {
	text-align: center;
	border-left: 0;
}

dl.preview-select {
	padding-top: 15px;
	margin-bottom: -5px;
}

dt.set-preview {
	margin-left: 40px;
}

img.icon {
	float: right;
}

/* Rating Code */
ul.rating, ul.rated {
	list-style-type: none;
	display: inline;
}

ul.rating li, ul.rated li {
	display: inline;
	border: 0;
}

.rating a {
	text-decoration: none;
}

.rating-available, .rating-inactive, .rating-rated, .rating-remove {
	background-image: url("./images/icons.png");
	background-repeat: no-repeat;
	display: inline-block;
	height: 16px;
	width: 16px;
}

.rating-available { background-position: 0 -32px; }
.rating-inactive { background-position: 0 -48px; }
/* ... */

